# workflow-runner

./: .gitignore  BUG_FIXES.md  DOCUMENTATION.md  Dockerfile  GETTING_STARTED.md  INTEGRATION_GUIDE.md  Makefile  PORT_CONFIGURATION.md  README.md  UI_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240301_000001_initial_schema.py  20250104_000003_add_template_recurrence.py  20250121_000002_add_variables_support.py  20250604_000004_add_template_recurrence.py
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py
app/models/: __init__.py  templates.py
app/schemas/: __init__.py  base.py  runs.py  templates.py
app/services/: run_loader.py
scripts/: import_template.py  smoke.sh
templates/: README.md  post-webinar-conversion-template.json
tests/: conftest.py  test_api_endpoints.py  test_runs_flow.py  test_templates_crud.py  test_validation.py  test_workflow_deletion_bug.py
tests/integration/: test_workflow_flow.py
tests/smoke/: test_api_smoke.py
tests/unit/: test_schemas.py
ui/: .env.local.example  App.tsx  README.md  eslint.config.js  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts  vitest.config.ts
ui/__tests__/: setup.ts
ui/components/: ActiveProcesses.tsx  Dashboard.tsx  ErrorBoundary.tsx  HomePage.tsx  Layout.tsx  RichStepEditor.tsx  RichStepRenderer.tsx  Settings.tsx  Toast.tsx  (+4 more)
web/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+27 files in other folders)
